--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="clickProxy"
-            type="com.myatejx.vipmvp.ui.TestListFragment.ClickProxy"/>
+            type="com.myatejx.vipmvp.ui.NoteListFragment.ClickProxy"/>
 
     </data>
 
