--- a/app/src/main/res/layout/fragment_note_detail.xml
+++ b/app/src/main/res/layout/fragment_note_detail.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="clickProxy"
-            type="com.myatejx.vipmvp.ui.TestDetailFragment.ClickProxy"/>
+            type="com.myatejx.vipmvp.ui.NoteDetailFragment.ClickProxy"/>
 
     </data>
 
